Added 'get user annotations' service
